--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
-pandas
-numpy
-joblib
-tensorflow
-scikit-learn
+pandas==2.0.3
+numpy==1.24.3
+joblib==1.3.2
+tensorflow==2.12.0
+scikit-learn==1.3.0
